--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,6 @@ body {
 
 .services-prices {
   display: flex;
-
   justify-content: space-around;
 }
 
@@ -287,7 +286,7 @@ body {
 .services-left-prices {
   margin-left: auto;
   margin-right: 50px;
-  background-color: linear-gradient(
+  background-image: linear-gradient(
     180deg,
     #171a24 0%,
     rgba(23, 26, 36, 0.2) 100%
@@ -295,7 +294,7 @@ body {
 }
 .services-right-prices {
   margin-right: auto;
-  background-color: linear-gradient(
+  background-image: linear-gradient(
     180deg,
     #090b13 0%,
     rgba(9, 11, 19, 0.2) 100%
@@ -493,6 +492,7 @@ body {
 
 .social-link:hover {
   color: var(--brand-color);
+  cursor: pointer;
 }
 
 /* Barbers pictures */
@@ -529,23 +529,25 @@ body {
 /* Contacts */
 .contacts-container {
   display: flex;
-  background-color: #191c26;
-  background-image: url("../images/background/contacts-background.png");
-  background-repeat: no-repeat;
-  background-position: right;
 }
 .booking-container {
   display: flex;
-
-  border: 2px solid red;
+  background-color: rgba(25, 28, 38, 1);
   width: 50%;
   height: 634px;
   flex-direction: column;
 }
 .links-container {
   display: flex;
-
+  background-image: linear-gradient(
+      180deg,
+      rgba(25, 28, 38, 0.9) 0%,
+      rgba(25, 28, 38, 0.9) 100%
+    ),
+    url("../images/background/contact-background.jpg");
+  opacity: 100%;
   background-repeat: no-repeat;
+  background-size: cover;
   width: 50%;
   height: 634px;
   flex-direction: column;
@@ -555,7 +557,6 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  border: 2px solid green;
   margin-left: 200px;
 }
 
@@ -591,6 +592,9 @@ body {
   margin-left: 100px;
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  margin-bottom: 70px;
+  padding-left: 0px;
 }
 
 .links-container .title {
@@ -599,8 +603,11 @@ body {
   margin-top: 130px;
 }
 .contact-item {
+  display: flex;
   font-weight: 700;
   color: #9da4bd;
+  align-items: center;
+  margin-left: 0px;
 }
 
 .links-container .subtitle {
@@ -616,6 +623,35 @@ body {
 .email {
   text-decoration-line: underline;
 }
+
+.links-container > .subtitle > svg {
+  margin-right: 20px;
+  position: relative;
+  bottom: 3px;
+}
+.links-icons {
+  fill: rgba(157, 164, 189, 1) !important;
+  margin-right: 25px;
+}
+
+.links-icons:nth-child(1) {
+  width: 16px;
+  height: 18px;
+}
+
+.links-icons:nth-child(2) {
+  width: 16px;
+  height: 16.03px;
+}
+.links-icons:nth-child(3) {
+  width: 18px;
+  height: 14px;
+}
+
+.links-container > text {
+  margin-bottom: 120px;
+}
+
 /* Footer */
 .footer-container {
   display: flex;
