--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --paragraph-color-white: #9da4bd;
   --subtitle-white-color: rgba(157, 164, 189, 0.6);
   --black-color: black;
+  --form-grey-color: rgba(157, 164, 189, 0.4);
 }
 body {
   font-family: "Open Sans", sans-serif;
@@ -558,20 +559,60 @@ body {
 
 .booking-form {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 200px;
+  margin-left: 150px;
+  gap: 30px;
+  margin-right: 30px;
 }
 
-.booking-form > .text > svg {
-  color: currentColor;
+.booking-form input {
+  flex: 1 1 40%;
+  height: 23px;
+}
+
+.booking-form textarea {
+  flex: 1 0 100%;
+  height: 75px;
+  resize: none;
+}
+
+.booking-form input,
+.booking-form textarea {
+  border: none;
+  background-color: transparent;
+  color: var(--form-grey-color);
+  border-bottom: 1px solid var(--form-grey-color);
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  padding: 8px 0;
+  outline: none;
+  box-shadow: none;
+}
+
+.booking-form input:focus,
+.booking-form textarea:focus {
+  color: var(--white-color);
+  border-bottom: 1px solid var(--white-color);
+}
+
+.booking-form input:focus::placeholder,
+.booking-form textarea:focus::placeholder {
+  color: var(--white-color);
+}
+
+.booking-form .button-nav {
+  width: 180px;
 }
 
 .booking-container .title {
   color: var(--white-color);
   margin-top: 130px;
-  margin-left: 200px;
+  margin-left: 150px;
 }
+
 .booking-container .text {
   color: rgba(157, 164, 189, 0.4);
   text-transform: uppercase;
@@ -584,11 +625,6 @@ body {
 .booking-container .text:focus {
   cursor: pointer;
   color: var(--white-color);
-}
-
-.booking-container .button-nav {
-  margin-left: 200px;
-  margin-right: auto;
 }
 
 .links-container-contact-list {
